--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,93 @@
 *{
 margin: 0;
 padding: 0;
+box-sizing: border-box;
 }
-html{
+html {
     font-family: "roboto", "noto", "helvetica", sans-serif;
     font-size: 14px;
-    background-color: aquamarine;
+    background-color: aqua;
     height:100%;
 }
 
-.calculator (
-     wi
+.calculator {
+     width: 350px;
+     height: auto;
+     margin: 70px auto 0;
+     overflow: hidden;
+     box-shadow: 4px 4px rgba(0,0,0,.2);
 
+    }
+    .calculator span {
+        -moz-user-select: none;
+        user-select: none;
+    }
 
+    .top {
+        position: relative;
+        height: 150px;
+        background-color: white;
+    }
 
+    .top .unite {
+        text-transform: uppercase;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        font-weight: 700;
+        color: #757575;
+    }
 
-)
+.top .screen {
+    position: relative;
+    width: 100%;
+    top: 20%;
+    height: 80%;
+}
+
+.screen > div {
+    display: flex;
+    align-self: center;
+    justify-self: flex-end;
+    width: 100%;
+    padding: 5px;
+    text-align: right;
+}
+
+.screen .input {
+    color: #757575;
+    height: 60%;
+    font-size: 35px;
+}
+
+.screen .result {
+    color: #9e9e9e;
+    font-size: 20px;
+     height: 40;
+    }
+
+    .bottom{
+        background-color: #2d2d2d;
+        height: 300px;
+        color: white;
+        cursor: pointer;
+    }
+
+    .bottom section{
+        position: relative;
+        height: 100%;
+        float: left;
+        display: flex;
+    }
+
+    .key {
+        width: 80%;
+    }
+
+    .key .collumn .operators {
+        flex-direction: column;
+        justify-self: center;
+        align-items: center;
+    }
+
+    
