--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ margin: 0;
 padding: 0;
 box-sizing: border-box;
 }
+
 html {
-    font-family: "roboto", "noto", "helvetica", sans-serif;
+    font-family: "Roboto", "Noto", "Helvetica", sans-serif;
     font-size: 14px;
-    background-color: aqua;
+    background-color: lightblue;
     height:100%;
 }
 
@@ -17,6 +18,7 @@ html {
      overflow: hidden;
      box-shadow: 4px 4px rgba(0,0,0,.2);
 }
+
     .calculator span {
         -moz-user-select: none;
         user-select: none;
@@ -47,7 +49,7 @@ html {
 .screen > div {
     display: flex;
     align-self: center;
-    justify-self: flex-end;
+    justify-content: flex-end;
     width: 100%;
     padding: 5px;
     text-align: right;
@@ -62,7 +64,7 @@ html {
 .screen .result {
     color: #9e9e9e;
     font-size: 20px;
-     height: 40;
+     height: 40%;
     }
 
     .bottom {
@@ -83,28 +85,28 @@ html {
         width: 80%;
     }
  
-    .key .column{
+    .key .column {
     display: flex;
     flex-grow: 1;
     }
     
-    .key .column .operators {
+    .key .column, .operators {
         flex-direction: column;
-        justify-self: center;
+        justify-content: center;
         align-items: center;
     }
 
-   .key .column span, operators span {
+   .key .column span, .operators span {
     position: relative;
     overflow: hidden;
     flex-grow: 1;
-    width: 100;
+    width: 100%;
     line-height: 1;
-    padding: 10%;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: back-ground-color 0.5s;
+    transition: background-color 0.5s;
     }
 
 .key .column span {
