--- a/style.css
+++ b/style.css
@@ -81,22 +81,22 @@ html {
         display: flex;
     }
 
-    .key {
+    .keys {
         width: 80%;
     }
  
-    .key .column {
+    .keys .column {
     display: flex;
     flex-grow: 1;
     }
     
-    .key .column, .operators {
+    .keys .column, .operators {
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
 
-   .key .column span, .operators span {
+   .keys .column span, .operators span {
     position: relative;
     overflow: hidden;
     flex-grow: 1;
@@ -109,11 +109,11 @@ html {
     transition: background-color 0.5s;
     }
 
-.key .column span {
+.keys .column span {
     font-size: 25px;
 }
 
-.key .column span:hover, .operators span:hover {
+.keys .column span:hover, .operators span:hover {
     background-color: rgb(0, 0, 0, 0.2);
 }
 
